fixed errors in order ride logic, now canceling invitation in the use case

--- a/HopIn/src/app/order-ride/order-ride.component.html
+++ b/HopIn/src/app/order-ride/order-ride.component.html
@@ -10,4 +10,4 @@
         <invite-friends-form></invite-friends-form>
     </mat-step>
 </mat-horizontal-stepper>
-<!-- <vehicles-map></vehicles-map> -->
+<vehicles-map></vehicles-map>
