--- a/HopIn/src/app/toolbar/toolbar.component.html
+++ b/HopIn/src/app/toolbar/toolbar.component.html
@@ -18,7 +18,7 @@
         <div class="navbar-nav">
             <a *ngIf="role != null" [routerLink]="['/order-ride']">Home</a>
             <a (click)="openAccount()" *ngIf="role === 'ROLE_PASSENGER' || role === 'ROLE_DRIVER'">Account</a>
-            <a *ngIf="role === 'ROLE_ADMIN'">Reports</a>
+            <a *ngIf="role === 'ROLE_ADMIN'" [routerLink]="['/admin-reports']">Reports</a>
             <a *ngIf="role === 'ROLE_ADMIN'">Drivers</a>
             <a *ngIf="role === 'ROLE_ADMIN'">Chat</a>
             <a *ngIf="role != null">History</a>
