--- a/HopIn/src/app/admin-reports/admin-reports.component.css
+++ b/HopIn/src/app/admin-reports/admin-reports.component.css
@@ -7,3 +7,9 @@
     width: fit-content;
     margin-top: 5vh;
 }
+
+@media screen and (max-width: 1000px) {
+    #main_container {
+        flex-direction: column;
+    }
+}
