added calling backend code

--- a/HopIn/src/app/forgot-password/forgot-password.component.html
+++ b/HopIn/src/app/forgot-password/forgot-password.component.html
@@ -13,3 +13,4 @@
     </form>
     <img src="../../assets/vectors/forgot-password.svg" alt="" height="300px">
 </div>
+<app-snack-bar></app-snack-bar>
