--- a/HopIn/src/app/user-graph/user-graph.component.css
+++ b/HopIn/src/app/user-graph/user-graph.component.css
@@ -310,6 +310,8 @@ canvas {
     width: 70vw;
     height: fit-content;
     margin-top: 4vh !important;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #reportContainerPassenger {
