--- a/HopIn/src/app/reset-password/reset-password.component.html
+++ b/HopIn/src/app/reset-password/reset-password.component.html
@@ -9,7 +9,7 @@
           </mat-form-field>
           <mat-form-field>
             <mat-label>Confirm new password</mat-label>
-            <input matInput type="password" name="conf-password" formControlName="confpass"/>
+            <input matInput type="password" name="conf-password" formControlName="confpass" [errorStateMatcher]="confirmValidParentMatcher"/>
             <mat-error *ngIf="resetPasswordForm.get('confpass')?.errors?.['required']">confirming password is required</mat-error>
             <mat-error *ngIf="resetPasswordForm.errors?.['passwordMismatchError']">passwords don't match</mat-error>
           </mat-form-field>
