added methods in ride-history-component for communication with backend

--- a/HopIn/src/app/ride-history/ride-history.component.html
+++ b/HopIn/src/app/ride-history/ride-history.component.html
@@ -52,7 +52,7 @@
                 <div class="rightImgContainer"><img src="../../assets/vectors/heart_red.svg"></div>
             </div>
             <div id="stars">
-                <ngx-star-rating [id]="'rating'"></ngx-star-rating>
+                <ngx-star-rating [ngModel]="rating" [id]="'rating'" ></ngx-star-rating>
             </div>
         </div>
 
