--- a/HopIn/src/app/ride-history/ride-history.component.html
+++ b/HopIn/src/app/ride-history/ride-history.component.html
@@ -4,13 +4,13 @@
     <h2>Ride history</h2>
     <div class="line"></div>
 
-    <div id="historyCard">
+    <div id="historyCard" *ngFor="let ride of rides; let indexOfelement=index;">
         <div id="left">
             <div class="row">
                 <div id="carImg">
                     <img src="../../assets/vectors/car.svg">
                 </div>
-                <h4>Novi Sad -> Belgrade</h4>
+                <h4>{{ ride.locations[0].departure.address + " -> " + ride.locations[0].destination.address }}</h4>
             </div>
 
             <div class="row">
@@ -18,7 +18,7 @@
                     <img src="../../assets/vectors/calendar-alt.svg">
                 </div>
                 <p class="key">Date: </p>
-                <p class="value">20.01.2023 11:30</p>
+                <p class="value">{{ ride.startTime }}</p>
             </div>
 
             <div class="row">
@@ -26,7 +26,7 @@
                     <img src="../../assets/vectors/distance.svg">
                 </div>
                 <p class="key">Distance: </p>
-                <p class="value">1.2 km</p>
+                <p class="value">{{ ride.distance + ' km' }}</p>
             </div>
 
             <div class="row">
@@ -34,7 +34,7 @@
                     <img src="../../assets/vectors/passenger.svg">
                 </div>
                 <p class="key">Passengers: </p>
-                <p class="value">1</p>
+                <p class="value">{{ ride.passengers.length }}</p>
             </div>
 
             <div class="row">
@@ -42,17 +42,18 @@
                     <img src="../../assets/vectors/moneyBag.svg">
                 </div>
                 <p class="key">Price(RSD): </p>
-                <p class="value">300</p>
+                <p class="value">{{ ride.totalCost }}</p>
             </div>
         </div>
 
         <div id="right">
             <div class="row">
                 <div class="rightImgContainer"><img src="../../assets/vectors/chatIcon.svg"></div>
-                <div class="rightImgContainer"><img src="../../assets/vectors/heart_red.svg"></div>
+                <div *ngIf="this.isfavoriteRoutes[indexOfelement] === true" class="rightImgContainer" (click)="removeRoute(indexOfelement)"><img src="../../assets/vectors/heart_red.svg"></div>
+                <div *ngIf="this.isfavoriteRoutes[indexOfelement] === false" class="rightImgContainer" (click)="returnRoute(indexOfelement)"><img src="../../assets/vectors/heart_empty.svg"></div>
             </div>
             <div id="stars">
-                <ngx-star-rating [ngModel]="rating" [id]="'rating'" ></ngx-star-rating>
+                <ngx-star-rating [ngModel]="ratings[indexOfelement]" [id]="'rating'+indexOfelement"></ngx-star-rating>
             </div>
         </div>
 
