added responsive design

--- a/HopIn/src/app/ride-history/ride-history.component.css
+++ b/HopIn/src/app/ride-history/ride-history.component.css
@@ -172,4 +172,14 @@ img {
     cursor: pointer;
 }
 
+@media only screen and (max-width: 900px) {
+    #favourite-rides-container {
+        width: 90vw;
+    }
+
+    .chooseLabels {
+        display: none;
+    }
+}
+
 
