added initial design for ride-info-card

--- a/HopIn/src/app/ride-history-details/ride-history-details.component.html
+++ b/HopIn/src/app/ride-history-details/ride-history-details.component.html
@@ -1,1 +1,6 @@
-<p>{{ ride.id }}</p>
+<div id="mainContianer">
+    <div id="upper">
+        <ride-info-card></ride-info-card>
+        <div id="map"></div>
+    </div>
+</div>
