--- a/HopIn/src/app/ride-history-details/ride-history-details.component.html
+++ b/HopIn/src/app/ride-history-details/ride-history-details.component.html
@@ -1,6 +1,8 @@
 <div id="mainContianer">
     <div id="upper">
         <ride-info-card></ride-info-card>
-        <div id="map"></div>
+        <div id="map">
+            <map></map>
+        </div>
     </div>
 </div>
