--- a/HopIn/src/app/ride-history-details/ride-history-details.component.css
+++ b/HopIn/src/app/ride-history-details/ride-history-details.component.css
@@ -19,7 +19,21 @@
 #map {
     width: 35vw;
     margin-left: auto;
-    margin: 10px;
+    margin: 1vw;
     border-radius: 10px;
+}
+
+#lower {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    margin-top: 3vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.right {
+    width: 37vw;
+    margin: 10px;
 }
 
