--- a/HopIn/src/app/ride-history-details/ride-history-details.component.html
+++ b/HopIn/src/app/ride-history-details/ride-history-details.component.html
@@ -5,4 +5,12 @@
             <map></map>
         </div>
     </div>
+    <div id="lower">
+        <div class="left">
+            <app-driver-info-card></app-driver-info-card>
+        </div>
+        <div class="right">
+
+        </div>
+    </div>
 </div>
