--- a/HopIn/src/app/ride-info-card/ride-info-card.component.css
+++ b/HopIn/src/app/ride-info-card/ride-info-card.component.css
@@ -25,7 +25,7 @@ h4 {
     padding: 10px 0 10px 10px;
     border: 2px solid #E6E6E6;
     border-radius: 10px;
-    margin: 10px;
+    margin: 1vw;
     background-color: white;
     display: flex;
     flex-direction: row;
