--- a/HopIn/src/app/driver-info-card/driver-info-card.component.html
+++ b/HopIn/src/app/driver-info-card/driver-info-card.component.html
@@ -3,25 +3,25 @@
         <img class="center" src="../../assets/vectors/wheel.svg">
     </div>
     <div id="info" class="center">
-        <p id="name">Mark Jacobs</p>
+        <p id="name">{{ driver.name + ' ' + driver.surname }}</p>
         <div class="row">
             <p class="key">email:</p>
-            <p class="value">grace@gmail.com</p>
+            <p class="value">{{ driver.email }}</p>
         </div>
         <div class="row">
             <p class="key">phone num:</p>
-            <p class="value">054334334</p>
+            <p class="value">{{ driver.telephoneNumber }}</p>
         </div>
         <div class="row">
             <p class="key">plates:</p>
-            <p class="value">K61-A-435</p>
+            <p class="value">{{ driver.licenseNumber }}</p>
         </div>
         <div class="row">
             <p class="key">vehicle model:</p>
-            <p class="value">Ford Mustang</p>
+            <p class="value">{{ driver.model }}</p>
         </div>
     </div>
     <div id="profilePic">
-        <img class="center" src="../../assets/vectors/profileAvatar.svg" alt="">
+        <img class="center" [src]="url" alt="">
     </div>
 </div>
