added passengers-info-card into ride-history-details and adjusted design to match new component

--- a/HopIn/src/app/driver-info-card/driver-info-card.component.css
+++ b/HopIn/src/app/driver-info-card/driver-info-card.component.css
@@ -56,10 +56,10 @@ p {
     padding-right: 12px;
     background-color: #DCDCDC;
     height: 100%;
+    width: 12%;
     display: flex;
 }
 
 .center {
-    margin-top: auto;
-    margin-bottom: auto;
+    margin: auto;
 }
