--- a/HopIn/src/app/passengers-info-card/passengers-info-card.component.css
+++ b/HopIn/src/app/passengers-info-card/passengers-info-card.component.css
@@ -6,6 +6,7 @@
     border: 2px solid #E6E6E6;
     border-radius: 10px;
     background-color: white;
+    margin-top: 3vh;
 }
 
 .row {
@@ -18,7 +19,7 @@
 }
 
 .mu {
-    margin-top: 4px;
+    margin-top: 1px;
 }
 
 p {
@@ -75,13 +76,13 @@ h4 {
     padding-right: 12px;
     background-color: #DCDCDC;
     height: 100%;
+    width: 12%;
     display: flex;
-    margin-right: 1rem;
+    margin-right: 1em;
 }
 
 .center {
-    margin-top: auto;
-    margin-bottom: auto;
+    margin: auto;
 }
 
 .scroll {
@@ -89,4 +90,8 @@ h4 {
     overflow-x: hidden;
     height: 80%;
     padding-right: 20px;
+}
+
+#info {
+    width: 80%;
 }
