--- a/HopIn/src/app/passengers-info-card/passengers-info-card.component.html
+++ b/HopIn/src/app/passengers-info-card/passengers-info-card.component.html
@@ -5,39 +5,22 @@
     <div id="info">
         <h4>Passengers who were with you:</h4>
         <div class="scroll">
-            <div id="passengerCard" class="row">
+            <div id="passengerCard" class="row" *ngFor="let passenger of passengers; let indexOfelement=index;">
                 <div id="profilePic">
                     <img src="../../assets/images/profile-placeholder.png">
                 </div>
                 <div id="passengerInfo">
-                    <p id="name">Milan Jelicic</p>
+                    <p id="name">{{passenger.name + ' ' + passenger.surname}}</p>
                     <div class="row mu">
                         <p class="key">email:</p>
-                        <p class="value">milance@gmail.com</p>
+                        <p class="value">{{passenger.email}}</p>
                     </div>
                     <div class="row mb">
                         <p class="key">phone num:</p>
-                        <p class="value">+38164555555</p>
+                        <p class="value">{{passenger.telephoneNumber}}</p>
                     </div>
                 </div>
             </div>
-
-            <!-- <div id="passengerCard" class="row">
-                <div id="profilePic">
-                    <img src="../../assets/images/profile-placeholder.png">
-                </div>
-                <div id="passengerInfo">
-                    <p id="name">Milan Jelicic</p>
-                    <div class="row mu">
-                        <p class="key">email:</p>
-                        <p class="value">milance@gmail.com</p>
-                    </div>
-                    <div class="row mb">
-                        <p class="key">phone num:</p>
-                        <p class="value">+38164555555</p>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </div>
 </div>
