--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div style="height: 100%;">
   <toolbar></toolbar>
-  <div id="content">
+  <!-- <div id="content">
     <router-outlet></router-outlet>
-  </div>
+  </div> -->
+  <app-ratings-card></app-ratings-card>
 </div>
