--- a/HopIn/src/app/ride-history-details/ride-history-details.component.html
+++ b/HopIn/src/app/ride-history-details/ride-history-details.component.html
@@ -11,7 +11,7 @@
             <app-passengers-info-card></app-passengers-info-card>
         </div>
         <div class="right">
-
+            <app-ratings-card></app-ratings-card>
         </div>
     </div>
 </div>
