changed history card clickable part, entering details only if car icon or route are pressed

--- a/HopIn/src/app/ride-history/ride-history.component.html
+++ b/HopIn/src/app/ride-history/ride-history.component.html
@@ -37,9 +37,9 @@
     </div>
     <div class="line"></div>
 
-    <div id="historyCard" *ngFor="let ride of currentRidesToShow; let indexOfelement=index;" (click)="openDetails(indexOfelement)">
+    <div id="historyCard" *ngFor="let ride of currentRidesToShow; let indexOfelement=index;">
         <div id="left">
-            <div class="row">
+            <div class="row clickable" (click)="openDetails(indexOfelement)">
                 <div id="carImg">
                     <img src="../../assets/vectors/car.svg">
                 </div>
