--- a/HopIn/src/app/ride-history/ride-history.component.css
+++ b/HopIn/src/app/ride-history/ride-history.component.css
@@ -33,6 +33,10 @@ h4 {
     color: #1E4A5A;
 }
 
+h4:hover {
+    color: black;
+}
+
 .line {
     height: 3px;
     width: 100%;
@@ -128,6 +132,11 @@ img {
 ::ng-deep label.star {
     padding: 0 5px !important;
     font-size: 20px !important;
+}
+
+.clickable:hover {
+    cursor: pointer;
+    color: black;
 }
 
 
