fixed responsive design in ride-history-details

--- a/HopIn/src/app/ratings-card/ratings-card.component.css
+++ b/HopIn/src/app/ratings-card/ratings-card.component.css
@@ -69,3 +69,10 @@ p {
 button:hover {
     cursor: pointer;
 }
+
+
+@media only screen and (max-width: 1050px) {
+    #card {
+        width: 89vw;
+    }
+}
