--- a/HopIn/src/app/driver-info-card/driver-info-card.component.css
+++ b/HopIn/src/app/driver-info-card/driver-info-card.component.css
@@ -63,3 +63,17 @@ p {
 .center {
     margin: auto;
 }
+
+@media only screen and (max-width: 1050px) {
+    #card {
+        width: 90vw;
+    }
+
+    #info {
+        margin-left: 10px;
+    }
+
+    #profilePic > img {
+        height: 50%;
+    }
+}
