--- a/HopIn/src/app/ride-history-details/ride-history-details.component.css
+++ b/HopIn/src/app/ride-history-details/ride-history-details.component.css
@@ -42,13 +42,20 @@ app-passengers-info-card {
     margin-top: 2vh;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1050px) {
     #upper {
         flex-direction: column;
+        height: fit-content;
+        width: fit-content;
     }
 
     #lower {
         flex-direction: column;
+    }
+
+    .right {
+        margin: 0;
+        margin-top: 3vh;
     }
 }
 
