created block service to connect users-display and block-users-details components

--- a/HopIn/src/app/users-display/users-display.component.html
+++ b/HopIn/src/app/users-display/users-display.component.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div id="request-cards">
-        <div class="request-card" *ngFor="let user of currentDisplay">
+        <div class="request-card" *ngFor="let user of currentDisplay" (click)="selectUser(user)">
             <div class="driver-data">
                 <img [src]="url" class="driver-photo">
                 <div class="driver-info">
