--- a/HopIn/src/app/block-user-details/block-user-details.component.css
+++ b/HopIn/src/app/block-user-details/block-user-details.component.css
@@ -5,10 +5,24 @@
     padding: 0 10px 25px 25px;
     margin: 0 auto;
     margin-top: 20px;
-    height: fit-content;
+    height: 120px;
     border: 2px solid #E6E6E6;
     border-radius: 10px;
     background-color: white;
+}
+
+#mainContainerAlt {
+    display: flex;
+    flex-direction: row;
+    width: 500px;
+    padding: 25px 25px 25px 25px;
+    margin: 0 auto;
+    margin-top: 20px;
+    height: 120px;
+    border: 2px solid #E6E6E6;
+    border-radius: 10px;
+    background-color: white;
+    color: #B1B1B1;
 }
 
 p {
@@ -33,7 +47,7 @@ p {
 
  .left img {
     width: 50%;
-    margin: auto auto 0 auto;
+    margin: 0 auto 0 auto;
     border-radius: 35px;
  }
 
