--- a/HopIn/src/app/block-user-details/block-user-details.component.html
+++ b/HopIn/src/app/block-user-details/block-user-details.component.html
@@ -1,7 +1,11 @@
-<div id="mainContainer">
+<div id="mainContainerAlt" *ngIf="isSelected != true">
+    <p>Select user to see details..</p>
+</div>
+
+<div *ngIf="isSelected === true"  id="mainContainer">
     <div class="left column">
         <img src="../../assets/images/profile-placeholder.png">
-        <p id="name">Marko Markic</p>
+        <p id="name">{{ currentUser.name + ' ' + currentUser.surname}}</p>
         <p id="role">Passenger</p>
     </div>
     <div class="middle column">
@@ -12,11 +16,11 @@
         <div class="data">
             <div class="keyValue">
                 <p class="key">Email:</p>
-                <p id="email" class="value">gmail@gmail.com</p>
+                <p id="email" class="value">{{ currentUser.email }}</p>
             </div>
             <div class="keyValue">
                 <p class="key">Phone number:</p>
-                <p id="phoneNumber" class="value">0997879</p>
+                <p id="phoneNumber" class="value">{{ currentUser.telephoneNumber }}</p>
             </div>
         </div>
 
@@ -27,7 +31,7 @@
         <div class="data">
             <div class="keyValue">
                 <p class="key">Address:</p>
-                <p id="address" class="value">Novi Sad</p>
+                <p id="address" class="value">{{ currentUser.address }}</p>
             </div>
         </div>
     </div>
