finished initial design for notes-display component

--- a/HopIn/src/app/users-dashboard/users-dashboard.component.html
+++ b/HopIn/src/app/users-dashboard/users-dashboard.component.html
@@ -3,8 +3,9 @@
         <div class="left">
             <app-users-display></app-users-display>
         </div>
-        <div class="right row">
+        <div class="right">
             <app-block-user-details></app-block-user-details>
+            <app-notes-display></app-notes-display>
         </div>
     </div>
 </div>
