--- a/HopIn/src/app/notes-display/notes-display.component.css
+++ b/HopIn/src/app/notes-display/notes-display.component.css
@@ -5,7 +5,7 @@
 
 
 .allFeedBackOptionsContianer {
-    height: fit-content;
+    height: 393px;
     width: 550px;
     background: white;
     border: 1px solid #D9D9D9;
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 15px;
-    margin-top: 3vh;
+    margin-top: 30px;
 }
 
 p {
@@ -34,11 +34,16 @@ h2 {
     height: 30px;
 }
 
+#allCards {
+    Overflow-y:scroll;
+    overflow-x: hidden;
+}
+
 .notesCard {
     display: flex;
     flex-direction: row;
-    width: 90%;
-    height: 16.5vh;
+    width: 85%;
+    height: 100px;
     background: white;
     border: 1px solid #D9D9D9;
     padding: 15px;
