--- a/HopIn/src/app/users-dashboard/users-dashboard.component.css
+++ b/HopIn/src/app/users-dashboard/users-dashboard.component.css
@@ -3,7 +3,7 @@
 }
 
 #mainContainer > div {
-    margin-top: 3vh;
+    margin-top: 15px;
     width: fit-content;
     margin: 0 auto;
     display: flex;
@@ -11,9 +11,9 @@
 }
 
 .left {
-    margin-right: 1vw;
+    margin-right: 15px;
 }
 
 .right {
-    margin-left: 1vw;
+    margin-left: 15px;
 }
